testing auth POST (Register and Login) Done
